[package]
name = "dotfiler"
version = "0.1.0"
authors = ["matthunz <matthunz2@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthunz/dotfiler"
homepage = "https://github.com/matthunz/dotfiler"
description = """
A templating system for unix configuration files
"""

[dependencies]
tera = "0.1.2"
toml = "0.1"
